tests/ui/type/ascription/issue-54516.stderr
error: path separator must be a double colon
  --> $DIR/issue-54516.rs:5:28
   |
LL |     println!("{}", std::mem:size_of::<BTreeMap<u32, u32>>());
   |                            ^ help: use a double colon instead: `::`
   |
   = note: if you meant to annotate an expression with a type, the type ascription syntax has been removed, see issue #101728 <https://github.com/rust-lang/rust/issues/101728>

error: aborting due to previous error

